# mcp-learning

./: .gitignore  DEVELOPMENT_GUIDE.md  README.md  launch-team.sh  pyproject.toml  requirements.txt  skills-lock.json  start-team.sh
.worklogs/: .snapshot  2026-02-21.md  2026-02-23.md  2026-03-01.md
docs/: ARCHITECTURE.md  CODING_CONVENTIONS.md  TESTING.md  explanation.md  plan.md  research.md  test-report.md  usage.md
prompts/: developer.md  planner.md  researcher.md  tester.md
src/til_server/: __init__.py  config.py  db.py  github_storage.py  notion_storage.py  prompts.py  resources.py  server.py  storage.py  tools.py
tests/: test_config.py  test_migration.py  test_notion_storage.py  test_server.py  test_storage_router.py
